# dari-for-bussiness-backend

./: .env.example  .gitignore  DATABASE_FIX_GUIDE.md  FULL_DATABASE_MIGRATION.sql  PRODUCTION_READY.md  README.md  RECEIPT_FEATURE_SUMMARY.md  _check_merchant.py  _fix_merchant.py  check_db.py  check_enum.py  check_permit.py  check_postgres.py  cleanup_recovery_metadata.py  create_test_data.py  dari_payments.db  debug_output.json  debug_output2.txt  decode_error2.py  fix_enum.py  force_retry_refunds.py  init_db.py  migrate_web3_subs.py  monitor_scheduler.bat  pytest_out.txt  requirements.txt  run_listeners.py  seed_test_data.py  show_all_merchants.py  start.bat  start.sh  test_api.py  test_instant_vs_scheduled.py  test_receipt_generation.py  test_scheduler.py  update_stellar_refund.py
app/: main.py
contracts/: hardhat.config.avalanche.js  hardhat.config.js  package-lock.json  package.json
contracts/solana/dari_subscriptions/: Anchor.toml  Cargo.toml
contracts/solana/dari_subscriptions/src/: lib.rs
docs/: BEFORE_AFTER_COMPARISON.md  BLOCKCHAIN_LISTENERS.md  DUAL_CURRENCY_SECURITY_GUIDE.md  ENTERPRISE_INFRASTRUCTURE_V2_2.md  ERROR_FIXES.md  FEATURE_ENHANCEMENT_OPTIONS.md  FRONTEND_CHANGES_V6.md  FRONTEND_INTEGRATION_V2_2.md  FRONTEND_INTEGRATION_V3.md  IMPLEMENTATION_COMPLETE.md  INSTANT_VS_SCHEDULED_REFUNDS.md  LOCAL_CURRENCY_BALANCE.md  ONBOARDING_FRONTEND_GUIDE.md  PAYMENT_TIMEOUT_AND_DEEP_LINKS.md  PRICING_AND_FEATURES.md  PROJECT_STRUCTURE.md  README.md  REALTIME_BLOCKCHAIN_INTEGRATION.md  RECEIPT_GENERATION_GUIDE.md  REFUND_FEATURES.md  REFUND_SCHEDULER.md  (+12 more)
(+250 files in other folders)
