[package]
name = "dari-subscriptions"
version = "0.1.0"
description = "Dari for Business — Solana subscription program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dari_subscriptions"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30"
anchor-spl = "0.30"
